--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,5 +12,12 @@
         <li class="menu_list-item">
             <a routerLink="about-us">About Us</a>
         </li>
+        <li class="menu_log-item">
+            <a routerLink="login">Log In</a>
+        </li>
+        <li class="menu_sign-item">
+            <a routerLink="signup">Sign Up</a>
+        </li>
     </ul>
 </div>
+
