--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -27,6 +27,7 @@ a:hover {
     margin-block-start: 0em;
     margin-block-end: 0em;
     margin-left: 100px;
+    margin-top: 10px;
 }
 
 .menu_list-item{
@@ -36,5 +37,25 @@ a:hover {
 }
 
 .menu_list-item:hover{
+    border-bottom: 2px solid #000000;
+}
+
+.menu_log-item {
+    margin-left: 700px;
+    cursor: pointer;
+    margin-bottom: 1px;
+}
+
+.menu_log-item:hover{
+    border-bottom: 2px solid #000000;
+}
+
+.menu_sign-item {
+    margin-left: 50px;
+    cursor: pointer;
+    margin-bottom: 1px;
+}
+
+.menu_sign-item:hover{
     border-bottom: 2px solid #000000;
 }
