--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
             </button>
 
             <button class="signup_button">
-                Log In
+                <a [routerLink]="['/home']">Log In</a>
             </button>
         </div>
     </div>
