--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -64,3 +64,8 @@
     background-color: rgb(255, 66, 66);
     border: .5px solid #999;
 }
+
+a {
+    text-decoration: none;
+    color: #000000;
+}
