--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -26,19 +26,12 @@
     border-radius: 5px;
     border: .5px solid #999;
     font-size: 20px;
-}
-
-.signup_password{
-    padding-top: 25px;
+    margin-bottom: 25px;
 }
 
 .pass_text{
     font-size: x-large;
     padding-bottom: 5px;
-}
-
-.signup_repeat-password{
-    padding-top: 25px;
 }
 
 .repeat_pass-text{
@@ -58,7 +51,7 @@
 }
 
 .signup_button:hover {
-    background-color: rgb(94, 230, 94);
+    background-color: rgb(235, 235, 235);
     border: .5px solid #999;
 }
 
@@ -70,6 +63,11 @@
 }
 
 .cencel_button:hover {
-    background-color: rgb(255, 66, 66);
+    background-color: rgb(235, 235, 235);
     border: .5px solid #999;
+}
+
+a {
+    text-decoration: none;
+    color: #000000;
 }
