--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -26,17 +26,18 @@
     border-radius: 5px;
     border: .5px solid #999;
     font-size: 20px;
-    margin-bottom: 25px;
 }
 
 .pass_text{
     font-size: x-large;
     padding-bottom: 5px;
+    padding-top: 25px;
 }
 
 .repeat_pass-text{
     font-size: x-large;
-    padding-bottom: 5px
+    padding-bottom: 5px;
+    padding-top: 25px;
 }
 
 .signup_buttons {
@@ -70,4 +71,16 @@
 a {
     text-decoration: none;
     color: #000000;
+}
+
+.invalid_password-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(255, 47, 47);
+}
+
+.valid_password-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(64, 253, 47);
 }
