--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,28 +1,44 @@
 <div class="login_content">
-    <div class="login_avtoriz">
-        <div class="login_login">
+    <div class="login_avtoriz"
+         [formGroup] = "loginForm"
+         (submit)="login(loginForm.value)">
+
+        <div class="login_login"
+             formGroupName="email">
+
             <div class="log_input-text">
                 Login
             </div>
 
-            <input class="input_log" type="text">
+            <input class="input_log" 
+                   type="text"
+                   placeholder="email"
+                   formControlName="email"
+                   [style.border-color]="loginForm.get('email').invalid ? 'red' : 'green'">
         </div>
 
-        <div class="login_password">
+        <div class="login_password"
+             formGroupName="password">
             <div class="pass_text">
                 Password
             </div>
 
-            <input class="input_log" type="text">
+            <input class="input_log" 
+                   type="password" 
+                   placeholder="Password"
+                   formControlName="password">
         </div>
 
         <div class="login_buttons">
-            <button class="cencel_button">
-                <a [routerLink]="['/']">Cencel</a>
+            <button class="cencel_button"
+                    [routerLink]="['/home']">
+                Cencel
             </button>
 
-            <button class="login_button">
-                <a [routerLink]="['/home']">Log In</a>
+            <button class="login_button"
+                    [routerLink]="['/home']"
+                    [disabled]="loginForm.invalid">
+                Log In
             </button>
         </div>
     </div>
