--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,10 +1,9 @@
 <div class="signup_content">
-    <div class="signup_avtoriz"
+    <form class="signup_avtoriz"
          [formGroup] = "signupForm"
-         (submit)="signup(signupForm.value)">
+         (ngSubmit)="setUserData()">
 
-        <div class="signup_login"
-             formGroupName="email">
+        <div class="signup_login">
             <div class="log_input-text">
                 Sign Up
             </div>
@@ -13,13 +12,22 @@
                    type="text"
                    placeholder="email"
                    formControlName="email"
-                   [style.border-color]="signupForm.get('email').invalid ? 'red' : 'green'"
-                   >
+                   [ngClass]="{'red': email.invalid && (email.dirty || email.touched) || (isResponseError$ | async)}">
+
+            <div class="invalid_email-message" *ngIf="email.invalid || (isResponseError$ | async) || (email.dirty || email.touched)">
+                <div *ngIf="(isResponseError$ | async)">
+                    {{errorEmailMessage}}
+                </div>
+
+                <div *ngIf="email.invalid && (email.dirty || email.touched)">
+                    Email is required
+                </div>
+            </div>
         </div>
 
-        <div class="signup_password"
-             formGroupName="password"
-             >
+
+        <div class="signup_password">
+             
             <div class="pass_text">
                 Password
             </div>
@@ -57,11 +65,12 @@
             </button>
 
             <button class="signup_button" 
-                    [disabled]="signupForm.invalid" 
-                    [routerLink]="['/home']"
-                    >
-                    Sign up    
+                    [disabled]="signupForm.invalid"
+                    type="submit">
+                Sign up    
             </button>
         </div>
-    </div>
+    </form>
 </div>
+
+<!--[routerLink]="['/home']"-->
