--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -26,6 +26,10 @@
     border-radius: 5px;
     border: .5px solid #999;
     font-size: 20px;
+
+    &.red {
+        border: 1px solid red;
+    }
 }
 
 .pass_text{
@@ -71,6 +75,12 @@
 a {
     text-decoration: none;
     color: #000000;
+}
+
+.invalid_email-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(255, 47, 47);
 }
 
 .invalid_password-message {
