--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -26,6 +26,10 @@
     border-radius: 5px;
     border: .5px solid #999;
     font-size: 20px;
+
+    &.red {
+        border: 1px solid red;
+    }
 }
 
 .login_password{
@@ -63,6 +67,18 @@
 .cencel_button:hover {
     background-color: rgb(255, 66, 66);
     border: .5px solid #999;
+}
+
+.invalid_email-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(255, 47, 47);
+}
+
+.invalid_password-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(255, 47, 47);
 }
 
 a {
