--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -12,7 +12,8 @@
                    type="text"
                    placeholder="email"
                    formControlName="email"
-                   [ngClass]="{'red': email.invalid || (isResponseError$ | async) || (email.dirty || email.touched)}">
+                   autocomplete="off"
+                   [ngClass]="{'red': email.invalid && (isResponseError$ | async) || (email.dirty || email.touched)}">
 
             <div class="invalid_email-message">
                 <div *ngIf="(isResponseError$ | async)">
@@ -35,7 +36,8 @@
             <input class="input_log" 
                    type="password" 
                    placeholder="Password"
-                   formControlName="password">
+                   formControlName="password"
+                   autocomplete="off">
 
             <div class="repeat_pass-text">
                 Repeat password
@@ -45,6 +47,7 @@
                    type="password" 
                    placeholder="Repeat password"
                    formControlName="repeatPassword"
+                   autocomplete="off"
                    [ngClass]="{'red': password.invalid && (password.dirty || password.touched)}">
                    
             <div class="invalid_password-message"
