--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -30,6 +30,10 @@
     &.red {
         border: 1px solid red;
     }
+
+    &.green {
+        border: 1px solid green;
+    }
 }
 
 .login_password{
@@ -73,6 +77,12 @@
     text-align: left;
     padding-left: 25px;
     color: rgb(255, 47, 47);
+}
+
+.valid_email-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(64, 253, 47);
 }
 
 .invalid_password-message {
