--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -87,6 +87,12 @@ a {
     color: rgb(255, 47, 47);
 }
 
+.valid_email-message {
+    text-align: left;
+    padding-left: 25px;
+    color: rgb(64, 253, 47);
+}
+
 .invalid_password-message {
     text-align: left;
     padding-left: 25px;
