--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,10 +10,10 @@
 
             <input class="input_log" 
                    type="text"
-                   id="email"
                    placeholder="email"
                    formControlName="email"
-                   autocomplete="off"
+                   autocomplete="disabled"
+                   (input)="changeState($event.target.value)"
                    [ngClass]="{'red': email.invalid || (isResponseError$ | async) || (email.dirty || email.touched),
                                'green': email.valid && !(isResponseError$ | async)}">
 
@@ -43,7 +43,7 @@
                    type="password" 
                    placeholder="Password"
                    formControlName="password"
-                   autocomplete="off">
+                   autocomplete="disabled">
 
             <div class="repeat_pass-text">
                 Repeat password
@@ -53,7 +53,7 @@
                    type="password" 
                    placeholder="Repeat password"
                    formControlName="repeatPassword"
-                   autocomplete="off"
+                   autocomplete="disabled"
                    [ngClass]="{'red': (isResponseError$ | async) || (repeatPassword.dirty || repeatPassword.touched),
                                'green': signupForm.valid && !(isResponseError$ | async) && repeatPassword.valid}">
                    
