--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,10 +1,7 @@
 <form class="menu">
     <ul class="menu_list">
         <li class="menu_list-item">
-            <a routerLink="">Header</a>
-        </li>
-        <li class="menu_list-item">
-            <a routerLink="home">Home</a>
+            <a routerLink="">Home</a>
         </li>
         <li class="menu_list-item">
             <a routerLink="dashboard">Dashboard</a>
