--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -13,6 +13,11 @@
                    type="text"
                    placeholder="email"
                    formControlName="email"
+                   readonly 
+                   onfocus="if (this.hasAttribute('readonly')) {
+                        this.removeAttribute('readonly');
+                        this.blur();    
+                        this.focus();}"
                    (input)="changeState($event.target.value)"
                    [ngClass]="{'red': (emailLogin.dirty || emailLogin.touched) || (isResponseError$ | async),
                                'green': emailLogin.valid && !(isResponseError$ | async)}">
@@ -42,6 +47,11 @@
                    type="password" 
                    placeholder="Password"
                    formControlName="password"
+                   readonly 
+                   onfocus="if (this.hasAttribute('readonly')) {
+                        this.removeAttribute('readonly');
+                        this.blur();    
+                        this.focus();}"
                    [ngClass]="{'red': (isResponseError$ | async),
                                'green': !(isResponseError$ | async) && password.valid}">
 
