--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -10,9 +10,13 @@
 
             <input class="input_log" 
                    type="text"
+                   readonly 
+                   onfocus="if (this.hasAttribute('readonly')) {
+                        this.removeAttribute('readonly');
+                        this.blur();    
+                        this.focus();}"
                    placeholder="email"
                    formControlName="email"
-                   autocomplete="disabled"
                    (input)="changeState($event.target.value)"
                    [ngClass]="{'red': email.invalid || (isResponseError$ | async) || (email.dirty || email.touched),
                                'green': email.valid && !(isResponseError$ | async)}">
@@ -41,9 +45,13 @@
 
             <input class="input_log" 
                    type="password" 
+                   readonly 
+                   onfocus="if (this.hasAttribute('readonly')) {
+                        this.removeAttribute('readonly');
+                        this.blur();    
+                        this.focus();}"
                    placeholder="Password"
-                   formControlName="password"
-                   autocomplete="disabled">
+                   formControlName="password">
 
             <div class="repeat_pass-text">
                 Repeat password
@@ -53,7 +61,6 @@
                    type="password" 
                    placeholder="Repeat password"
                    formControlName="repeatPassword"
-                   autocomplete="disabled"
                    [ngClass]="{'red': (isResponseError$ | async) || (repeatPassword.dirty || repeatPassword.touched),
                                'green': signupForm.valid && !(isResponseError$ | async) && repeatPassword.valid}">
                    
