--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -11,38 +11,23 @@
     max-height: 400px;
 }
 
-.log_input-text{
-    font-size: x-large;
-    padding-bottom: 15px;
-}
-
 .login_login{
     padding-top: 50px;
 }
 
-.input_log {
-    height: 30px;
+.datapicker_style {
     width: 300px;
     border-radius: 5px;
-    border: .5px solid #999;
+}
+
+.input_log {
+    height: 20px;
+    width: 300px;
     font-size: 20px;
-
-    &.red {
-        border: 1px solid red;
-    }
-
-    &.green {
-        border: 1px solid green;
-    }
 }
 
 .login_password{
     padding-top: 25px;
-}
-
-.pass_text{
-    font-size: x-large;
-    padding-bottom: 5px;
 }
 
 .login_buttons {
