--- a/src/app/auth/signup/signup.component.scss
+++ b/src/app/auth/signup/signup.component.scss
@@ -11,45 +11,28 @@
     max-height: 400px;
 }
 
-.log_input-text{
-    font-size: x-large;
-    padding-bottom: 15px;
+.datapicker_style {
+    width: 300px;
+    border-radius: 5px;
 }
 
 .signup_login{
     padding-top: 50px;
+    padding-bottom: 15px;
 }
 
 .input_log {
-    height: 30px;
+    height: 20px;
     width: 300px;
-    border-radius: 5px;
-    border: .5px solid #999;
     font-size: 20px;
-
-    &.red {
-        border: 1px solid red;
-    }
-
-    &.green {
-        border: 1px solid green;
-    }
 }
 
-.pass_text{
-    font-size: x-large;
-    padding-bottom: 5px;
-    padding-top: 25px;
-}
-
-.repeat_pass-text{
-    font-size: x-large;
-    padding-bottom: 5px;
-    padding-top: 25px;
+.pass {
+    padding-bottom: 15px;
 }
 
 .signup_buttons {
-    padding-top: 40px;
+    padding-top: 30px;
 }
 
 .signup_button{
